--- a/nginx_drone.conf
+++ b/nginx_drone.conf
@@ -1,8 +1,8 @@
 server {
     listen 8080;  # Nginx 监听的端口
 
-    server_name 172.25.74.79;  # 域名或ip
-    # server_name 192.168.1.108;  # 域名或ip
+    # server_name 172.25.74.79;  # 域名或ip
+    server_name 192.168.1.108;  # 域名或ip
 
     location /api/ws {
         proxy_pass http://localhost:19999;  # WebSocket 服务的地址
@@ -24,8 +24,28 @@ server {
     }
 
     location / {
-        root /var/www/html;
+        root /var/www/html/api;
         index index.html;
         try_files $uri $uri/ /index.html;
+    }
+}
+
+server {
+    listen 8082;  # HTTP 端口
+
+    server_name 192.168.1.108;
+
+    location /api/ {
+        proxy_pass http://localhost:8088;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    location / {
+        root /var/www/html/stats;  # 静态文件目录
+        index index.html;  # 默认首页文件
+        try_files $uri $uri/ /index.html;  # 尝试访问文件或目录，不存在则返回 404
     }
 }
