--- a/drone-stats-service/Dockerfile
+++ b/drone-stats-service/Dockerfile
@@ -38,4 +38,4 @@ RUN apk add --no-cache tzdata \
 # 替换为实际的端口
 EXPOSE 8088
 
-CMD ["sh", "-c", "./app -f etc/dronestats.yaml > /app/app.log 2>&1"]
+CMD ["sh", "-c", "./app -f etc/dronestats.yaml > /app/log/app.log 2>&1"]
