--- a/nginx_drone.conf
+++ b/nginx_drone.conf
@@ -23,29 +23,23 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;  # 保持原始协议 (http 或 https)
     }
 
+    location /api/flight/stats {  # 指定转发路径
+        proxy_pass http://localhost:8088/api/flight/stats;  # 转发到目标服务
+        proxy_set_header Host $host;  # 保持原始主机名
+        proxy_set_header X-Real-IP $remote_addr;  # 客户端真实 IP 地址
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # 转发的代理链
+        proxy_set_header X-Forwarded-Proto $scheme;  # 保持原始协议 (http 或 https)
+    }
+
     location / {
-        root /var/www/html/api;
+        root /var/www/html;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
-}
 
-server {
-    listen 8082;  # HTTP 端口
-
-    server_name 192.168.1.108;
-
-    location /api/ {
-        proxy_pass http://localhost:8088;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-
-    location / {
-        root /var/www/html/stats;  # 静态文件目录
-        index index.html;  # 默认首页文件
-        try_files $uri $uri/ /index.html;  # 尝试访问文件或目录，不存在则返回 404
+    location /recordsui {
+        alias /var/www/html/stats;
+        index index.html;
+        try_files $uri $uri/ /stats/index.html;  # 确保单页面应用能正确处理路由
     }
 }
