新增 - 飞行架次/耗电统计

--- a/nginx_drone.conf
+++ b/nginx_drone.conf
@@ -23,8 +23,8 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;  # 保持原始协议 (http 或 https)
     }
 
-    location /api/flight/stats {  # 指定转发路径
-        proxy_pass http://localhost:8088/api/flight/stats;  # 转发到目标服务
+    location /record {  # 指定转发路径
+        proxy_pass http://localhost:8088;  # 转发到目标服务
         proxy_set_header Host $host;  # 保持原始主机名
         proxy_set_header X-Real-IP $remote_addr;  # 客户端真实 IP 地址
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # 转发的代理链
