新增 - 载货量上报前端页面; 优化 - 载货量上报后端服务逻辑；前端显示。

--- a/nginx_drone.conf
+++ b/nginx_drone.conf
@@ -37,9 +37,9 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /recordsui {
-        alias /var/www/html/stats;
-        index index.html;
-        try_files $uri $uri/ /stats/index.html;  # 确保单页面应用能正确处理路由
+    location /uploadPayload {
+        root /var/www/html;
+        index uploadPayload.html;
+        try_files $uri $uri/ /uploadPayload.html;  # 确保单页面应用能正确处理路由
     }
 }
