修改 - 一些bug修复；一些前端调整

--- a/nginx_drone.conf
+++ b/nginx_drone.conf
@@ -37,7 +37,7 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    location /uploadPayload {
+    location /uploadpayload {
         root /var/www/html;
         index uploadPayload.html;
         try_files $uri $uri/ /uploadPayload.html;  # 确保单页面应用能正确处理路由
