--- a/nginx_drone.conf
+++ b/nginx_drone.conf
@@ -31,6 +31,25 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;  # 保持原始协议 (http 或 https)
     }
 
+    location /vehicle/ws {
+        proxy_pass http://localhost:8060;  # WebSocket 服务的地址
+        proxy_http_version 1.1;  # 确保使用 HTTP/1.1 协议
+        proxy_set_header Upgrade $http_upgrade;  # WebSocket 握手所需的头
+        proxy_set_header Connection 'upgrade';  # WebSocket 握手所需的头
+        proxy_set_header Host $host;  # 保持原始的 Host 头部
+        proxy_set_header X-Real-IP $remote_addr;  # 传递客户端的 IP
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # 传递 X-Forwarded-For 头
+        proxy_set_header X-Forwarded-Proto $scheme;  # 传递 X-Forwarded-Proto 头
+    }
+
+    location /vehicle/ {  # 指定转发路径
+        proxy_pass http://localhost:8060;  # 转发到目标服务
+        proxy_set_header Host $host;  # 保持原始主机名
+        proxy_set_header X-Real-IP $remote_addr;  # 客户端真实 IP 地址
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;  # 转发的代理链
+        proxy_set_header X-Forwarded-Proto $scheme;  # 保持原始协议 (http 或 https)
+    }
+
     location / {
         root /var/www/html;
         index index.html;
