新增 - 实现数据写入自动重试+本地持久队列；计算每段海拔变化的绝对值之和，与水平距离相加，得出实际飞行中的移动距离。

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,6 @@
 /drone-stats-service/log
 /autonomous-vehicle/log
 /drone-stats-service/mysql_data
+/drone-stats-service/data
 /influxDB/influxdb2
 
