修改 - 服务重启时日志设置为续写，日志输出服务启动host:post同时输出时间戳；

--- a/drone-api/Dockerfile
+++ b/drone-api/Dockerfile
@@ -35,5 +35,5 @@ RUN apk add --no-cache tzdata \
 # 替换为实际的端口
 EXPOSE 19999
 
-CMD ["sh", "-c", "./app -f etc/drone-api.yaml > /app/log/app.log 2>&1"]
+CMD ["sh", "-c", "./app -f etc/drone-api.yaml >> /app/log/app.log 2>&1"]
 
